objects/Listing__c/Listing__c.object-meta.xml
<CustomObject>
    <description>賃料、空室ステータス、部屋ごとの写真。</description>
    <label>募集住戸</label>
    <nameField>
        <label>部屋番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>