objects/Listing__c/fields/AreaSize__c.field-meta.xml
<CustomField>
    <fullName>AreaSize__c</fullName>
    <inlineHelpText>平方メートル</inlineHelpText>
    <label>専有面積(㎡)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>