objects/Listing__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>物件</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>募集住戸</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>