objects/Listing__c/fields/BuildingDescription__c.field-meta.xml
<CustomField>
    <fullName>BuildingDescription__c</fullName>
    <formula>Building__r.BuildingDescription_AI__c</formula>
    <label>物件解説</label>
    <type>Text</type>
</CustomField>