objects/Listing__c/fields/BuiltYear__c.field-meta.xml
<CustomField>
    <fullName>BuiltYear__c</fullName>
    <formula>&quot;築&quot; &amp; TEXT(YEAR(TODAY()) - Building__r.BuiltYear__c) &amp; &quot;年&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>築年数</label>
    <type>Text</type>
</CustomField>