objects/Listing__c/fields/FloorPlan__c.field-meta.xml
<CustomField>
    <fullName>FloorPlan__c</fullName>
    <label>間取り</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FloorPlan</valueSetName>
    </valueSet>
</CustomField>