objects/Listing__c/fields/KeyLocation__c.field-meta.xml
<CustomField>
    <fullName>KeyLocation__c</fullName>
    <inlineHelpText>権限設定で見せる項目（ログインユーザーのみ表示）</inlineHelpText>
    <label>鍵情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>