objects/Listing__c/fields/NearestStation__c.field-meta.xml
<CustomField>
    <fullName>NearestStation__c</fullName>
    <formula>Building__r.NearestStation__c</formula>
    <label>最寄駅</label>
    <type>Text</type>
</CustomField>