objects/Listing__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <label>賃料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>