objects/Listing__c/fields/RoomCount_Calc__c.field-meta.xml
<CustomField>
    <fullName>RoomCount_Calc__c</fullName>
    <formula>CASE(FloorPlan__c, &quot;1R&quot;, 1, &quot;Studio&quot;, 1, VALUE(LEFT(TEXT(FloorPlan__c),1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>間取りから部屋数を自動算出する数式項目</inlineHelpText>
    <label>部屋数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>