objects/Listing__c/fields/SalesPoint_AI__c.field-meta.xml
<CustomField>
    <fullName>SalesPoint_AI__c</fullName>
    <inlineHelpText>Agentforce検索用（例：「南向きで日当たり良好。収納が多くファミリーに最適。」）</inlineHelpText>
    <label>AI用 セールスポイント</label>
    <type>TextArea</type>
</CustomField>