objects/Listing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>募集中</fullName>
            </value>
            <value>
                <fullName>商談中</fullName>
            </value>
            <value>
                <fullName>申込有</fullName>
            </value>
            <value>
                <fullName>成約済</fullName>
            </value>
            <value>
                <fullName>リフォーム中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>