objects/Listing__c/fields/WalkMinutes__c.field-meta.xml
<CustomField>
    <fullName>WalkMinutes__c</fullName>
    <formula>Building__r.WalkMinutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>徒歩分数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>