objects/Listing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Building__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>FloorPlan__c</columns>
    <columns>Rent__c</columns>
    <columns>AreaSize__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>